@@ -4,13 +4,13 @@ import javafx.application.Application;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Scene;
 import javafx.scene.control.Alert;
+import javafx.scene.image.Image;
 import javafx.stage.Stage;
-import javafx.stage.StageStyle;
-import javafx.scene.paint.Color; // NECESARIO
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.Locale;
+import java.util.Objects;
 import java.util.ResourceBundle;
 
 /**
@@ -22,7 +22,7 @@ import java.util.ResourceBundle;
  * - Registrar mensajes de log con SLF4J.
  * Contiene también el metodo {@link #main(String[])} para lanzar la aplicación.
  *
- * @author Erlantz García
+ * @author Erlantz
  * @version 1.0
  */
 public class App extends Application {
@@ -31,7 +31,7 @@ public class App extends Application {
     private static final Logger logger = LoggerFactory.getLogger(App.class);
 
     /** Bundle del sistema de internacionalización */
-    private ResourceBundle bundle;
+    private ResourceBundle resources;
 
     /**
      * Metodo principal que se ejecuta al iniciar la aplicación JavaFX.
@@ -39,85 +39,94 @@ public class App extends Application {
      * Si ocurre algún error, muestra una alerta y registra el error en el Log.
      *
      * @param stage Stage principal proporcionado por JavaFX.
+     *
+     * @author Erlantz
      */
     @Override
     public void start(Stage stage) {
-        // Declarar FXMLLoader fuera del try para que sea accesible, aunque no es estrictamente
-        // necesario para tu código actual, es buena práctica si lo necesitaras después.
-        FXMLLoader loaded = null;
-
-        try{
+        try {
             // Detectar el idioma del sistema
-            //Locale locale = Locale.getDefault();
-            Locale locale = new Locale("es");
+            // Locale locale = Locale.getDefault();
+            Locale locale = Locale.of("es");
 
-            // Bundle del sistema de internacionalización
-            bundle = ResourceBundle.getBundle("es.potersitos.mensaje", locale);
+            resources = ResourceBundle.getBundle("es.potersitos.mensaje", locale);
 
-            logger.debug("Cargando el archivo FXML: ventana.fxml");
-            loaded = new FXMLLoader(getClass().getResource("/es/potersitos/fxml/ventanaDatos.fxml"), bundle);
+            logger.debug("Cargando el archivo FXML: visualizarPersonajes.fxml");
+            FXMLLoader loaded = new FXMLLoader(getClass().getResource("/es/potersitos/fxml/visualizarPersonajes.fxml"), resources);
 
             Scene scene = new Scene(loaded.load());
             logger.info("FXML cargado correctamente");
 
-            // ===================================================================
-            // [CORRECCIÓN CLAVE]: Hace el fondo de la Scene transparente.
-            // ===================================================================
-            scene.setFill(Color.TRANSPARENT);
-
             // Comprobar que el archivo de CSS existe y si no mostrar una alerta
-            var archivoCSS = getClass().getResource("/es/potersitos/css/estiloDatos.css");
-            if(archivoCSS != null){
-                logger.info("CSS cargado correctamente");
+            var archivoCSS = getClass().getResource("/es/potersitos/css/estilo.css");
+            if (archivoCSS != null) {
+                logger.info("CSS cargado correctamente: {}", archivoCSS.toExternalForm());
                 scene.getStylesheets().add(archivoCSS.toExternalForm());
-            } else{
+            } else {
                 logger.error("No se ha podido cargar el CSS");
-                Alert alerta = new Alert(Alert.AlertType.INFORMATION);
-                alerta.setTitle("CSS no encontrado");
-                alerta.setHeaderText(null);
-                alerta.setContentText("No se ha podido cargar la hoja de estilos CSS");
-                alerta.showAndWait();
+                mandarAlertas(Alert.AlertType.INFORMATION, resources.getString("cssNoEncontrado"), null, resources.getString("cssNoEncontradoMensaje"));
             }
 
-            stage.setTitle("Adding/Deleting Rows in a TableViews");
+            stage.setTitle("Anuario de Hogwarts");
             stage.setScene(scene);
             stage.setResizable(true);
-            stage.setMinWidth(700);
-            stage.setMinHeight(450);
-            stage.setMaxWidth(700);
-            stage.setMaxHeight(450);
+            // Icono de la aplicación:
+            stage.getIcons().add(
+                    new Image(Objects.requireNonNull(getClass().getResourceAsStream("/es/potersitos/img/icono-app.png")))
+            );
 
-            // [MANTENIDO]: Elimina los bordes nativos del sistema.
-            stage.initStyle(StageStyle.TRANSPARENT);
-
+            stage.setMinWidth(1000);
+            stage.setMinHeight(700);
+            stage.setMaxWidth(1300);
+            stage.setMaxHeight(700);
             stage.show();
 
         } catch (Exception e) {
-            logger.error("Error al intentar cargar la aplicación {}", e.getMessage(), e); // Añadida 'e' para log completo
-            Alert alerta = new Alert(Alert.AlertType.ERROR);
-            alerta.setTitle("Error");
-            alerta.setHeaderText("Error al iniciar la aplicación");
-            alerta.setContentText("Se ha producido un error al intentar cargar la aplicación");
-            alerta.showAndWait();
+            logger.error("Error al intentar cargar la aplicación {}", e.getMessage());
+            mandarAlertas(Alert.AlertType.ERROR, resources.getString("error"), resources.getString("errorIniciarAplicacion"), resources.getString("errorIniciarAplicacionMensaje"));
         }
     }
 
     /**
      * Metodo que se ejecuta cuando cierra la aplicación.
      * Registra un mensaje de cierre en el archivo de Log.
+     *
+     * @author Erlantz
      */
     @Override
-    public void stop(){
+    public void stop() {
         logger.info("Aplicación finalizada correctamente");
+    }
+
+    /**
+     * Muestra una alerta JavaFX con los datos proporcionados.
+     *
+     * @param tipo          Tipo de alerta (INFO, WARNING, ERROR...)
+     * @param titulo        Título de la alerta
+     * @param mensajeTitulo Encabezado del mensaje
+     * @param mensaje       Contenido del mensaje
+     *
+     * @author Erlantz
+     */
+    private void mandarAlertas(Alert.AlertType tipo, String titulo, String mensajeTitulo, String mensaje) {
+        Alert alerta = new Alert(tipo);
+        alerta.setTitle(titulo);
+        alerta.setHeaderText(mensajeTitulo);
+        alerta.setContentText(mensaje);
+        alerta.showAndWait();
+        logger.debug("Alerta mostrada: tipo={}, mensaje={}", tipo, mensaje);
     }
 
     /**
      * Metodo principal que lanza la aplicación JavaFX
      *
      * @param args Argumentos de línea de comandos (no usados).
+     *
+     * @author Erlantz
      */
     public static void main(String[] args) {
         logger.info("Iniciando aplicación JavaFX...");
         launch();
     }
+
 }
